@@ -1,3 +1,10 @@
+2004-03-21 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/script.cpp
+	({anonymous}::js_::script::activate):  When converting the script
+	function arguments to jsvals, only add GC roots to garbage-collected
+	things; i.e., jsvals for which JSVAL_IS_GCTHING returns true.
+
 2004-03-20 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Rewrote use of GLU
